[package]
name = "sdmm_python"
version = "0.1.0"
authors = ["skull132 <skull@skullnet.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sdmm_python"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[dependencies.dreammaker]
git = "https://github.com/SpaceManiac/SpacemanDMM"
rev = "0ec49aa113d2107161e273fc8fd66322761d084c"
package = "dreammaker"
